--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "textEditor",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": false,
   "main": "./src/index.tsx",
   "keywords": [
@@ -21,8 +21,8 @@
   },
   "dependencies": {
     "quill": "^1.3.7",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "^16.8.6",
+    "react-native": ">=0.60.5 <1.0.x",
     "react-native-image-picker": "^2.3.1",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-webview": "^8.0.1"
