--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@base/auth",
-  "title": "React Native Base Auth",
+  "name": "RichText",
+  "title": "React Native Rich Text Editor",
   "private": true,
   "version": "1.3.0",
-  "description": "React Native Base Auth Module",
+  "description": "React Native Rich Text Editor Module",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -41,6 +41,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.base.vn/base-rn/base-auth.git"
+    "url": "https://github.com/decisionnguyen/rich-text#develop"
   }
 }
