--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "licenseFilename": "LICENSE",
   "peerDependencies": {
     "react-native-keyboard-spacer": "^0.4.1",
-    "react-native-webview": "^8.0.1",
+    "react-native-image-picker": "^2.3.1",
+    "react-native-popup-menu": "^0.15.7",
+    "react-native-webview": "^9.4.0",
     "quill": "^1.3.7",
     "react": "^16.8.6",
     "react-native": ">=0.60.5 <1.0.x"
