--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-image-picker": "^2.3.1",
     "react-native-popup-menu": "^0.15.7",
     "react-native-webview": "^9.4.0",
+    "shortid": "^2.2.15",
     "quill": "^1.3.7",
     "react": "^16.8.6",
     "react-native": ">=0.60.5 <1.0.x"
